--- a/frontend/src/components/NoAccountHomepage.css
+++ b/frontend/src/components/NoAccountHomepage.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/Helvetica.ttf') format('truetype'); /* Adjust this path as necessary */
+    src: url('../fonts/helvetica.woff') format('truetype'); /* Adjust this path as necessary */
     font-weight: normal;
     font-style: normal;
 }
