--- a/frontend/src/components/ResetPasswordUpdate.css
+++ b/frontend/src/components/ResetPasswordUpdate.css
@@ -211,7 +211,7 @@ html, body {
   /* Define the font */
   @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/Helvetica.ttf') format('truetype');
+    src: url('../fonts/helvetica.woff') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
