--- a/frontend/src/components/NoAccountSideMenu.css
+++ b/frontend/src/components/NoAccountSideMenu.css
@@ -142,6 +142,7 @@ body, .side-menu {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    z-index: 1;
 }
 
 .map-container {
