--- a/frontend/src/components/NoAccountSideMenu.css
+++ b/frontend/src/components/NoAccountSideMenu.css
@@ -1,5 +1,6 @@
 
-﻿/*Define the font*/
+/*Define the font*/
+
 @font-face {
     font-family: 'Helvetica';
     src: url('../fonts/helvetica-bold.woff') format('truetype'); /* Adjust this path as necessary */
